fixing my footer on mobile device-3

--- a/components/navigation.css
+++ b/components/navigation.css
@@ -30,7 +30,9 @@
 }
 
 .home-container {
-  max-height: 100%;
+  flex-grow: 1;
+  padding-bottom: 80px;
+  /* max-height: 100%; */
   margin-bottom: 6em;
 }
 
@@ -100,18 +102,23 @@
 }
 
 .footer {
-  display: block;
   text-align: center;
   padding: 20px;
   background-color: #282c34;
   color: white;
   margin-top: 2.5rem;
   margin-bottom: 0;
+  width: 100%;
+  position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer p {
   margin: 0;
 }
+
 
 .social-media {
   margin-top: 10px;
